AV-18: Align items, fix other affected pages

--- a/modules/ytp-assets-common/src/less/ckan/ckan.less
+++ b/modules/ytp-assets-common/src/less/ckan/ckan.less
@@ -559,6 +559,7 @@
     border-top: 1px solid rgba(0, 0, 0, 0.16);
     border-radius: 3px;
     padding: 0px;
+    margin: 0px 25px 25px 0px;
     .media-image {
       padding: 0px;
       border-radius: 0px;
@@ -750,4 +751,8 @@ li.organization {
   color: @opendata-brand-danger;
   vertical-align: middle;
   height: 1.3em;
+}
+
+.context-info .module-content {
+  padding: 0;
 }
